[project]
name = "clockwork_muse"
version = "0.1.0"
description = "clockwork-muse using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
clockwork_muse = "clockwork_muse.main:run"
run_crew = "clockwork_muse.main:run"
train = "clockwork_muse.main:train"
replay = "clockwork_muse.main:replay"
test = "clockwork_muse.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
